--- a/_posts/2024-05-27-AOP.md
+++ b/_posts/2024-05-27-AOP.md
@@ -1,7 +1,7 @@
 ---
 title: AOP (Aspect-Oriented Programming) 관점 지향 프로그래밍
 date: 2024-05-27 12:43:00 +09:00
-categories: [Spring]
+categories: [Spring,설계 & 아키텍처]
 tags: [프로그래밍 패러다임]
 ---
 
