posts: SOLID 오타 수정

--- a/_posts/2024-06-23-SOLID.md
+++ b/_posts/2024-06-23-SOLID.md
@@ -9,7 +9,7 @@ tags: [클린 아키텍쳐,객체 지향 프로그래밍]
 책의 내용을 적절히 섞어가며 정리한 거라 참고용으로 보시면 좋을 것 같아요.
 
 ## SOLID 원칙이란?
-- SOLID는 객체 지향 프로그래밍과 설계의 다섯 가지 원칙을 나타내는 약어에요.
+- SOLID는 객체 지향 프로그래밍 설계의 다섯 가지 원칙을 나타내는 약어에요.
 - 함수와 데이터 구조를 클래스로 배치하는 방법, 그리고 이들 클래스를 서로 결합하는 방법을 설명해줘요.
 
 ## SOLID 원칙의 목표
@@ -31,7 +31,7 @@ tags: [클린 아키텍쳐,객체 지향 프로그래밍]
 - 캡슐화(정보은닉)를 사용하여 변경에 대한 영향을 최소화할 수 있어요.
 
 ### 3. LSP: 리스코프 치환 원칙 (Liskov Substitution Principle)
-- P 프로그램에서 S 타입의 객체 o1 각각에 대응하는 T 타입 객체 o2가 있을 때, o2 자리를 o1 으로 치환해도 P 프로그램의 행위가 변하지 않는다면 S는 T의 하위 타입이다.
+- P 프로그램에서 S 타입의 객체 o1 각각에 대응하는 T 타입 객체 o2가 있을 때, o2 자리를 o1 으로 치환해도 P 프로그램의 행위가 변하지 않는다면 S는 T의 하위 이에요.
 - 상속 관계에서 하위 클래스는 상위 클래스의 기능을 변경하지 않고 확장할 수 있어야 해요.
 
 ### 4. ISP: 인터페이스 분리 원칙 (Interface Segregation Principle)
